# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
gendiff/: __init__.py  cli.py  diff.py  file_loader.py  files.py  formats.py
gendiff/accessory/: functions.py
gendiff/file_loader/: file_loader.py
gendiff/generate_diff/: generate_diff.py
gendiff/scripts/: formater.py  gendiff.py
gendiff/views/: __init__.py  default.py  json.py  plain.py
gendiff/views/dict/: view.py
gendiff/views/json/: view.py
gendiff/views/plain/: view.py
tests/: tests.py
tests/fixtures/: diff_file1_file2.txt  diff_file3_file4_default.txt  diff_file3_file4_json.json  diff_file3_file4_json2.json
